Finished the buy page and made some edits in the sell page, Also deleted some useless images

--- a/HtmlCssImages/index.html
+++ b/HtmlCssImages/index.html
@@ -146,22 +146,6 @@
 	</div>
 </figure>
 
-<!--- Emoji Section -->
-<!--- <button class = "fun" data-toggle = "collapse" data-target = "#emoji">Fuck arround
-</button>
-<div id = "emoji" class = "collapse">
-<div class ="container-fluid padding">
-<div class = "row text-center">
-	<div class = "col-sm-6 col-md-3 col-xl-10">
-		<img class = "gif" src = "img/gif/panda.gif">
-		<img class = "gif" src = "img/gif/poo.gif">
-		<img class = "gif" src = "img/gif/unicorn.gif">
-		<img class = "gif" src = "img/gif/chicken.gif">
-	</div>
-</div>
-</div>
-</div> -->
-  
 <!--- Meet the team -->
 <div class = "container-fluid padding">
 <div class = "row welcome text-center">
@@ -241,23 +225,6 @@
 <hr class = "my-4">
 </div>
 
-
-
-<!--- Two Column Section -->
-<!--- <div class = "container-fluid padding">
-	<div class = "row padding">
-		<div class = "col-md-12 col-lg-6">
-			<h2> The Vision</h2>
-			<p>Boyyyy you know you need this free free</p>
-			<p>Boyyyy you know you need this free free</p>
-			<br>
-		</div>
-		<div class = "col-lg-6">
-			<img src = "img/bootstrap2.png" class = "img-fluid">
-		</div>
-	</div>
-</div> -->
-
 <!--- Connect -->
 <div class = "container-fluid padding">
 <div class = "row text-center padding">
@@ -289,10 +256,10 @@
 		<hr class = "light">
 		<h5>Our hours</h5>
 		<hr class = "light">
-		<p>Monday : Fuck outta here</p>
-		<p>Monday : Fuck outta here</p>
-		<p>Monday : Fuck outta here</p>
-		<p>Monday : Fuck outta here</p>
+		<p>Sunday : Closed/p>
+		<p>Sunday : Closed</p>
+		<p>Sunday : Closed</p>
+		<p>Sunday : Closed</p>
 	</div>
 	<div class = "col-md-4">
 		<hr class = "liiht">
