--- a/HtmlCssImages/signup.html
+++ b/HtmlCssImages/signup.html
@@ -6,7 +6,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>MealSipers - Signup</title>
+      <title>MealSwipers - Signup</title>
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
       <link href="./signupstyle.css" rel="stylesheet" id="bootstrap-css">
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></script>
@@ -14,10 +14,6 @@
       <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
    </head>
    <body>
-      <!--[if lt IE 7]>
-         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-      <![endif]-->
-      
       <script src="" async defer></script>
    </body>
 </html>
