--- a/read.html
+++ b/read.html
@@ -1,119 +1,130 @@
 <!-- page for users to read reviews -->
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      href="{{ url_for('static', filename='style.css') }}"
-      rel="stylesheet"
-    />
-    <title>MealSwipers - Buy Page</title>
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round"> -->
-    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link
-      href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
-      rel="stylesheet"
-      id="bootstrap-css"
-    />
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <style>
-      @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,700");
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="favicon.ico">
 
-      .testimonial-box img {
-        display: inline-block;
-        width: 90px;
-        height: 90px;
-        border-radius: 50%;
-        margin: 0 0 15px;
-      }
-      .testimonial-box h4 {
-        color: #fe4819;
-      }
-      .testimonial-box p {
-        margin-bottom: 20px;
-        font-size: 17px;
-        font-style: italic;
-        font-weight: 400;
-      }
-      .ratings-icons {
-        color: #fec42d;
-        margin-bottom: 15px;
-      }
-    </style>
-    <script>
-      $(document).ready(function () {
-        $('[data-toggle="tooltip"]').tooltip();
-      });
-    </script>
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand reframe" href="#"
-          ><img src="{{url_for('static', filename='blackresize.png')}}"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-        >
-          <span class="navbar-toggler-icon"></span>
+<title>MealSwipers - Read Review Page</title>
+
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+<script src="js/ie-emulation-modes-warning.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
+<style>
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+
+body {
+  padding-top: 70px;
+  color: #566787;
+  background: #f5f5f5;
+  font-family: 'Poppins',sans-serif;
+  font-size: 1.0em;
+}
+.nav-link {
+  font-size: 1.1em !important;
+}
+.btn-grey{
+    background-color:#D8D8D8;
+  color:#FFF;
+}
+.rating-block{
+  background-color:#FAFAFA;
+  border:1px solid #EFEFEF;
+  padding:15px 15px 20px 15px;
+  border-radius:3px;
+}
+.bold{
+  font-weight:700;
+}
+.padding-bottom-7{
+  padding-bottom:7px;
+}
+
+.review-block{
+  background-color:#FAFAFA;
+  border:1px solid #EFEFEF;
+  padding:15px;
+  border-radius:3px;
+  margin-bottom:15px;
+}
+.review-block-date{
+  font-size:12px;
+}
+.review-block-title{
+  font-size:15px;
+  font-weight:700;
+  margin-bottom:10px;
+}
+.review-block-description{
+  font-size:13px;
+}
+</style>
+<script>
+$(document).ready(function(){
+  $('[data-toggle="tooltip"]').tooltip();
+});
+</script>
+<nav class = "navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <div class = "container-fluid">
+        <a class = "navbar-brand reframe" href = "#"><img src = "{{url_for('static', filename='blackresize.png')}}"></a>
+        <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
+            <span class = "navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Team</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Connect</a>
-            </li>
-          </ul>
+        <div class = "collapse navbar-collapse" id = "navbarResponsive">
+            <ul class = "navbar-nav ml-auto">
+                <li class = "nav-item active">
+                    <a class = "nav-link" href = "{{url_for('trade.buy')}}">Home</a>
+                </li>
+                <li class = "nav-item">
+                    <a class = "nav-link" href = "{{url_for('auth.logout')}}">Logout</a>
+                </li>
+            </ul>
         </div>
-      </div>
-    </nav>
-  </head>
-  <h1>Showing reviews for username {{username}}</h1>
-  <div class="container">
-    {% block content %} {% for review in post %}
-    <div class="row text-center">
-      <div class="col-sm-6 col-md-4">
-        <div class="testimonial-box">
-          <div class="ratings-icons">{{ review['rating']}}</div>
-          <h4>{{ review['timestamp'].strftime('%Y-%m-%d') }}</h4>
-          <p>{{ review['description']}}</p>
-        </div>
-      </div>
-      <!-- End Col -->
     </div>
-    {% endfor %} {% endblock %}
-  </div>
+</nav>
+</head>
+
+<body>
+  <h1 style = "padding-bottom: 10px; padding-top: 50px;">Reviews for {{username}}</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-7">
+        <div class="review-block">
+          {% block content %} 
+          {% for review in post %}
+          <div class="row">
+            <div class="col-sm-3">
+              <div class="review-block-date">{{ review['timestamp'].strftime('%Y-%m-%d') }}</div>
+            </div>
+            <div class="col-sm-9">
+              <div class="review-block-title">{{ review['rating']}}</div>
+              <div class="review-block-description">{{ review['description']}}</div>
+            </div>
+          </div>
+          <hr/>
+          {% endfor %} 
+          {% endblock %}
+        </div>
+      </div>
+    </div>
+    
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
+</body>
 </html>
+
